--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Home </title>
-<link rel="stylesheet" type="text/css" media="screen" href="main.css"/>
-</head>
-<div><img src="deakin.svg" alt="Deakin" width="200" height="210" ></div>
-<body>
-<h1>SIT223-SIT753 - Professional Practice in IT</h1>
-</body>
+  <head>
+    <title>Home</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  </head>
+  <div><img src="deakin.svg" alt="Deakin" width="200" height="210" /></div>
+  <body>
+    <h1>SIT223-SIT753 - Professional Practice in IT</h1>
+    <footer>footer</footer>
+  </body>
 </html>
