--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <title>Home</title>
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
   </head>
-  <div><img src="deakin.svg" alt="Deakin" width="200" height="210" /></div>
+  <div><img src="logo.svg" alt="Deakin" width="200" height="210" /></div>
   <body>
-    <h1>SIT223-SIT753 - Professional Practice in IT</h1>
-    <a>todo</a>
+  <h1>SIT223-SIT753 - Professional Practice in IT</h1>
   </body>
 </html>
